--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <!-- TODO: Update the title to your project name -->
   <title>AngularProjectTemplate</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
